fix: sidebar text wrap

--- a/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
+++ b/src/widgets/Sidebar/ui/Sidebar/Sidebar.module.scss
@@ -13,7 +13,7 @@
 	overflow-y: auto;
 
 	span {
-		white-space: nowrap;
+		white-space: normal;
 	}
 }
 
